--- a/projects/icc/tabs/src/tabs.component.html
+++ b/projects/icc/tabs/src/tabs.component.html
@@ -17,7 +17,10 @@
           [cdkDragDisabled]="dragDisabled(tab)"
           cdkDragPreviewClass="icc-drag-tabs-preview"
           cdkDragRootElement=".icc-mdc-tab"
-          [cdkContextMenuTriggerFor]="menu"
+          [iccPopover]="menu"
+          [iccPopoverTrigger]="contextMenuTrigger"
+          [clickToClose]="true"
+          [iccPopoverPosition]="position"
           >{{ getTabLabel(tab) }}
         </span>
         <icc-icon
@@ -28,13 +31,13 @@
         ></icc-icon>
       </ng-template>
       <ng-template #menu>
-        <cdk-menus
+        <icc-menus
           [items]="menuItem"
           [level]="1"
           [disabled]="getDisabled(tab, index)"
           (iccMenuItemClick)="onMenuItemClicked($event, tab, index)"
         >
-        </cdk-menus>
+        </icc-menus>
       </ng-template>
       <icc-portal *ngIf="index === selectedTabIndex" [content]="tab.content!" [context]="tab.context!"></icc-portal>
     </icc-tab>
