--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -39,7 +39,7 @@
       [column]="column"
       [gridSetting]="gridSetting"
       [gridConfig]="gridConfig"
-      (columnMenuClick)="onColumnMenuClick($event)"
+      [values]="values"
     >
     </icc-grid-header-cell>
 
