--- a/projects/icc/theme/src/core/_typography.scss
+++ b/projects/icc/theme/src/core/_typography.scss
@@ -19,6 +19,11 @@ icc-layout,
   font-size: 0.75rem;
   line-height: 1.25rem;
 
+  .cdk-overlay-connected-position-bounding-box {
+    width: unset !important;
+    height: unset !important;
+  }
+
   .cdk-global-overlay-wrapper {
     display: block;
     height: unset;
