--- a/projects/icc/tree/src/components/tree-view.component.html
+++ b/projects/icc/tree/src/components/tree-view.component.html
@@ -30,7 +30,7 @@
         [treeConfig]="treeConfig"
         [columns]="columns"
         [columnWidths]="columnWidths"
-        [record]="getRecord(record)"
+        [record]="record"
         cdkDrag
         [cdkDragDisabled]="treeConfig.dragDisabled"
         (cdkDragStarted)="dragStart(record)"
