--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -9,7 +9,7 @@
 
 <form [formGroup]="form" [iccFormLabelWidth]="formConfig.labelWidth">
   <ng-container *ngFor="let fieldConfig of formFields; trackBy: trackByIndex; let index = index">
-    @if (fieldConfig.fieldType === "fieldset") {
+    @if (fieldConfig.fieldType === FieldType.Fieldset) {
       <icc-fieldset [form]="form" [fieldConfig]="fieldConfig"></icc-fieldset>
     } @else {
       <icc-fields [form]="form" [fieldConfig]="fieldConfig"></icc-fields>
