--- a/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
+++ b/projects/icc-demo/src/app/views/date/demos/simple-date/simple-date.component.html
@@ -1,4 +1,5 @@
 <icc-date-range-field [fieldConfig]="dateRangeFieldConfig" [value]="range" (valueChange)="updateRange($event)">
 </icc-date-range-field>
 
-<icc-date-field [fieldConfig]="dateFieldConfig" (valueChange)="valueChange($event)"> </icc-date-field>
+<icc-date-field [fieldConfig]="dateFieldConfig" [value]="selectedDate" (valueChange)="valueChange($event)">
+</icc-date-field>
