--- a/projects/icc/menu/src/menus.component.html
+++ b/projects/icc/menu/src/menus.component.html
@@ -1,41 +1,39 @@
 <!-- Use form due to the use checkbox in the menu item -->
 <form *ngIf="form" [formGroup]="form">
   <div class="icc-menu-row" *ngFor="let item of items">
-    <icc-menu-item
-      *ngIf="isLeafMenu(item)"
-      [disabled]="getDisabled(item)"
-      [form]="form"
-      [menuItem]="item"
-      (iccMenuItemClick)="menuItemClick($event)"
-    >
-    </icc-menu-item>
-
-    <span
-      *ngIf="hasChildItem(item) && level === 0"
-      [iccPopover]="menu"
-      [iccPopoverTrigger]="menuTrigger"
-      [popoverLevel]="level"
-      [clickToClose]="clickToClose"
-      [iccPopoverPosition]="bottom"
-    >
-      <icc-icon *ngIf="item.icon" [config]="item.icon"></icc-icon>
-      <span class="icc-menu-item-title"> {{ item.title }}</span>
-    </span>
-
-    <icc-menu-item
-      *ngIf="hasChildItem(item) && level > 0"
-      [disabled]="getDisabled(item)"
-      [form]="form"
-      [menuItem]="item"
-      [iccPopover]="menu"
-      [iccPopoverTrigger]="hoverTrigger"
-      [popoverLevel]="level"
-      [clickToClose]="clickToClose"
-      [iccPopoverPosition]="rightBottom"
-      (iccMenuItemClick)="menuItemClick($event)"
-    >
-    </icc-menu-item>
-
+    @if (isLeafMenu(item)) {
+      <icc-menu-item
+        [disabled]="getDisabled(item)"
+        [form]="form"
+        [menuItem]="item"
+        (iccMenuItemClick)="menuItemClick($event)"
+      >
+      </icc-menu-item>
+    } @else if (hasChildItem(item) && level === 0) {
+      <span
+        [iccPopover]="menu"
+        [iccPopoverTrigger]="menuTrigger"
+        [popoverLevel]="level"
+        [clickToClose]="clickToClose"
+        [iccPopoverPosition]="bottom"
+      >
+        <icc-icon *ngIf="item.icon" [config]="item.icon"></icc-icon>
+        <span class="icc-menu-item-title"> {{ item.title }}</span>
+      </span>
+    } @else if (hasChildItem(item) && level > 0) {
+      <icc-menu-item
+        [disabled]="getDisabled(item)"
+        [form]="form"
+        [menuItem]="item"
+        [iccPopover]="menu"
+        [iccPopoverTrigger]="hoverTrigger"
+        [popoverLevel]="level"
+        [clickToClose]="clickToClose"
+        [iccPopoverPosition]="rightBottom"
+        (iccMenuItemClick)="menuItemClick($event)"
+      >
+      </icc-menu-item>
+    }
     <ng-template #menu>
       <icc-menus
         [form]="form"
