--- a/projects/icc/window/src/window.component.html
+++ b/projects/icc/window/src/window.component.html
@@ -19,73 +19,67 @@
 
   <ng-content></ng-content>
 
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeTop
-    iccResize
-    [direction]="resizeType.TOP"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
+  @if (windowConfig.resizeable) {
+    <div
+      IccResizeTop
+      iccResize
+      [direction]="resizeType.TOP"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
 
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeRight
-    iccResize
-    [direction]="resizeType.RIGHT"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeBottom
-    iccResize
-    [direction]="resizeType.BOTTOM"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
+    <div
+      IccResizeRight
+      iccResize
+      [direction]="resizeType.RIGHT"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
+    <div
+      IccResizeBottom
+      iccResize
+      [direction]="resizeType.BOTTOM"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
 
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeLeft
-    iccResize
-    [direction]="resizeType.LEFT"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeTopLeft
-    iccResize
-    [direction]="resizeType.TOP_LEFT"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
+    <div
+      IccResizeLeft
+      iccResize
+      [direction]="resizeType.LEFT"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
+    <div
+      IccResizeTopLeft
+      iccResize
+      [direction]="resizeType.TOP_LEFT"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
 
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeTopRight
-    iccResize
-    [direction]="resizeType.TOP_RIGHT"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
+    <div
+      IccResizeTopRight
+      iccResize
+      [direction]="resizeType.TOP_RIGHT"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
 
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeBottomRight
-    iccResize
-    [direction]="resizeType.BOTTOM_RIGHT"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
+    <div
+      IccResizeBottomRight
+      iccResize
+      [direction]="resizeType.BOTTOM_RIGHT"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
 
-  <div
-    *ngIf="windowConfig.resizeable"
-    IccResizeBottomLeft
-    iccResize
-    [direction]="resizeType.BOTTOM_LEFT"
-    [elementKey]="elementKey"
-    (iccResizeEvent)="onResizePanel($event)"
-  ></div>
+    <div
+      IccResizeBottomLeft
+      iccResize
+      [direction]="resizeType.BOTTOM_LEFT"
+      [elementKey]="elementKey"
+      (iccResizeEvent)="onResizePanel($event)"
+    ></div>
+  }
 </div>
