--- a/projects/icc/window/src/components/confirmation/confirmation.component.html
+++ b/projects/icc/window/src/components/confirmation/confirmation.component.html
@@ -4,18 +4,24 @@
       {{ confirmationConfig.message }}
     </icc-layout-horizontal>
 
-    <icc-layout-footer *ngIf="confirmationConfig.showFooter">
-      <button icc-button *ngIf="confirmationConfig.showOkButton" (click)="ok()">
-        {{ confirmationConfig.ok | translate }}
-      </button>
-
-      <button icc-button *ngIf="confirmationConfig.showCancelButton" (click)="cancel()">
-        {{ confirmationConfig.cancel | translate }}
-      </button>
-
-      <button icc-button *ngIf="confirmationConfig.showCloseButton" (click)="close()">
-        {{ confirmationConfig.close | translate }}
-      </button>
-    </icc-layout-footer>
+    @if (confirmationConfig.showFooter) {
+      <icc-layout-footer>
+        @if (confirmationConfig.showOkButton) {
+          <button icc-button (click)="ok()">
+            {{ confirmationConfig.ok | translate }}
+          </button>
+        }
+        @if (confirmationConfig.showCancelButton) {
+          <button icc-button (click)="cancel()">
+            {{ confirmationConfig.cancel | translate }}
+          </button>
+        }
+        @if (confirmationConfig.showCloseButton) {
+          <button icc-button (click)="close()">
+            {{ confirmationConfig.close | translate }}
+          </button>
+        }
+      </icc-layout-footer>
+    }
   </icc-layout>
 </icc-window>
