--- a/projects/icc/window/src/components/confirmation/confirmation.component.html
+++ b/projects/icc/window/src/components/confirmation/confirmation.component.html
@@ -1,25 +1,17 @@
 <icc-window [windowConfig]="confirmationConfig">
   <icc-layout [resizeable]="false">
-    <icc-layout-horizontal [resizeable]="false">
-      {{ confirmationConfig.message }}
-    </icc-layout-horizontal>
+    <icc-layout-horizontal [resizeable]="false">{{ confirmationConfig.message }}</icc-layout-horizontal>
 
     @if (confirmationConfig.showFooter) {
       <icc-layout-footer>
         @if (confirmationConfig.showOkButton) {
-          <button icc-button (click)="ok()">
-            {{ confirmationConfig.ok | translate }}
-          </button>
+          <button icc-button (click)="ok()">{{ confirmationConfig.ok | translate }}</button>
         }
         @if (confirmationConfig.showCancelButton) {
-          <button icc-button (click)="cancel()">
-            {{ confirmationConfig.cancel | translate }}
-          </button>
+          <button icc-button (click)="cancel()">{{ confirmationConfig.cancel | translate }}</button>
         }
         @if (confirmationConfig.showCloseButton) {
-          <button icc-button (click)="close()">
-            {{ confirmationConfig.close | translate }}
-          </button>
+          <button icc-button (click)="close()">{{ confirmationConfig.close | translate }}</button>
         }
       </icc-layout-footer>
     }
