--- a/projects/icc/portal/src/portal.component.html
+++ b/projects/icc/portal/src/portal.component.html
@@ -1,2 +1,4 @@
-<div *ngIf="portalType == 'text'" [innerHTML]="content"></div>
+@if (portalType == "text") {
+  <div [innerHTML]="content"></div>
+}
 <ng-template cdkPortalOutlet></ng-template>
