--- a/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
+++ b/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
@@ -6,17 +6,17 @@
     [iccFormFieldControl]="field"
     [showFieldEditIndicator]="showFieldEditIndicator"
   >
-    <icc-label *ngIf="fieldConfig.fieldLabel !== undefined && fieldConfig.labelBeforeCheckbox">
-      {{ fieldConfig.fieldLabel | translate }}
-    </icc-label>
+    @if (fieldConfig.fieldLabel !== undefined && fieldConfig.labelBeforeCheckbox) {
+      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    }
     <icc-checkbox [formControlName]="fieldConfig.fieldName!" (change)="onChange()"></icc-checkbox>
 
-    <div class="icc-suffix-content" *ngIf="!fieldConfig.labelBeforeCheckbox" iccSuffix (click)="iccSuffixClick($event)">
-      {{ fieldConfig.fieldLabel }}
-    </div>
+    @if (!fieldConfig.labelBeforeCheckbox) {
+      <div class="icc-suffix-content" iccSuffix (click)="iccSuffixClick($event)">{{ fieldConfig.fieldLabel }}</div>
+    }
 
-    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
-      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </icc-form-field-errors>
+    @if ((field?.touched || field?.dirty) && field?.errors) {
+      <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
+    }
   </icc-form-field>
 </ng-container>
