--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -6,9 +6,9 @@
     [iccFormFieldControl]="field"
     [showFieldEditIndicator]="showFieldEditIndicator"
   >
-    <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
-      {{ fieldConfig.fieldLabel | translate }}
-    </icc-label>
+    @if (fieldConfig.fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    }
     <input
       #calendarInput
       class="icc-date-field-input"
@@ -24,10 +24,11 @@
     <button iccSuffix icc-button [ghost]="true" [disabled]="field.disabled" (click)="openCalendar()">
       <icc-icon icon="calendar"></icc-icon>
     </button>
-
-    <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
-    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
-      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </icc-form-field-errors>
+    @if (fieldConfig.clearValue && hasValue) {
+      <icc-icon icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+    }
+    @if (field && (field.touched || field.dirty) && field.errors) {
+      <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
+    }
   </icc-form-field>
 </ng-container>
