--- a/projects/icc/fields/src/number-field/number-field.component.html
+++ b/projects/icc/fields/src/number-field/number-field.component.html
@@ -6,9 +6,9 @@
     [iccFormFieldControl]="field"
     [showFieldEditIndicator]="showFieldEditIndicator"
   >
-    <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
-      {{ fieldConfig.fieldLabel | translate }}
-    </icc-label>
+    @if (fieldConfig.fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    }
     <input
       iccInput
       #inputEl
@@ -20,10 +20,11 @@
       [required]="required"
       placeholder="{{ fieldConfig.placeholder! | translate }}"
     />
-    <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
-
-    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
-      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </icc-form-field-errors>
+    @if (fieldConfig.clearValue && hasValue) {
+      <icc-icon icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+    }
+    @if (field && (field.touched || field.dirty) && field.errors) {
+      <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
+    }
   </icc-form-field>
 </ng-container>
