--- a/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
+++ b/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
@@ -5,10 +5,9 @@
     [iccFieldWidth]="fieldConfig.fieldWidth"
     [iccFormFieldControl]="field"
   >
-    <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
-      {{ fieldConfig.fieldLabel | translate }}
-    </icc-label>
-
+    @if (fieldConfig.fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    }
     <ng-container *ngFor="let group of groups; trackBy: trackByIndex; let index = index">
       <icc-radio
         [value]="group.name"
@@ -20,9 +19,8 @@
         {{ group.title }}
       </icc-radio>
     </ng-container>
-
-    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
-      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </icc-form-field-errors>
+    @if (field && (field.touched || field.dirty) && field.errors) {
+      <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
+    }
   </icc-form-field>
 </ng-container>
