--- a/projects/icc/fields/src/textarea-field/textarea-field.component.html
+++ b/projects/icc/fields/src/textarea-field/textarea-field.component.html
@@ -5,9 +5,9 @@
     [iccFieldWidth]="fieldConfig.fieldWidth"
     [iccFormFieldControl]="field"
   >
-    <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
-      {{ fieldConfig.fieldLabel | translate }}
-    </icc-label>
+    @if (fieldConfig.fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+    }
     <textarea
       iccInput
       [formControlName]="fieldConfig.fieldName!"
@@ -17,10 +17,11 @@
       placeholder="{{ fieldConfig.placeholder! | translate }}"
     >
     </textarea>
-    <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
-
-    <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
-      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-    </icc-form-field-errors>
+    @if (fieldConfig.clearValue && hasValue) {
+      <icc-icon icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+    }
+    @if (field && (field.touched || field.dirty) && field.errors) {
+      <icc-form-field-errors><icc-field-errors [errors]="field!.errors!"></icc-field-errors></icc-form-field-errors>
+    }
   </icc-form-field>
 </ng-container>
